--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FocusBox</title>
-    <link rel="icon" href="img-landingpage/Product 1.png" type="image/png" />
+    <link rel="icon" href="Icons/Notion.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -304,7 +304,7 @@
       }
       .FAQsSesction img{
         height: 600px;
-        width: 550px;
+        width: 500px;
       }
       .FAQs p{
         border-bottom: 3px #3353FF solid;
@@ -413,7 +413,7 @@
     <header>
       <nav>
         <ul>
-          <li><img src="img-landingpage/Logo.png" alt="FocusBox Logo" style="width: 100px; height: 25px;"/></li>
+          <li><img src="Icons/Notion.png" alt="FocusBox Logo" style="width: 35px; height: 35px;"/></li>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><button id="signUp-btn" onclick="location.href='Main-signup.html'">Sign Up</button></li>
