--- a/Main-signup.html
+++ b/Main-signup.html
@@ -5,81 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
     <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-    rel="stylesheet"
-  />
-    <!-- <link rel="stylesheet" href="signup.css" /> -->
-     <style>
-    * {
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="Icons/Notion.png" type="image/png" />
+    <style>
+      * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: "Roboto", sans-serif;
-    }
+      }
 
-    body {
+      body {
         background-color: #1e1e1e;
         color: #ffffff;
         display: flex;
         align-items: center;
         justify-content: center;
         min-height: 100vh;
-    }
+      }
 
-    .container {
+      .container {
         display: flex;
-        flex-direction: row; 
+        flex-direction: row;
         background-color: #333333;
         border-radius: 10px;
         overflow: hidden;
         max-width: 800px;
         width: 100%;
-    }
+      }
 
-    .image-signup {
+      .image-signup {
         flex: 1;
         display: flex;
         align-items: center;
         justify-content: center;
         background-color: #ffffff;
         padding: 20px;
-    }
+      }
 
-    .image-signup img {
+      .image-signup img {
         max-width: 100%;
         height: auto;
         object-fit: contain;
-    }
+      }
 
-    .form-container {
+      .form-container {
         flex: 1;
         padding: 30px;
         display: flex;
         flex-direction: column;
         gap: 10px;
         background-color: #333333;
-    }
+      }
 
-    .back-btn {
+      .back-btn {
         color: #ffffff;
         text-decoration: none;
         font-size: 18px;
         margin-bottom: 10px;
-    }
+      }
 
-    h1 {
-        color: #3353FF;
+      h1 {
+        color: #3353ff;
         margin-bottom: 5px;
-    }
+      }
 
-    p {
+      p {
         margin-bottom: 10px;
         font-size: 14px;
-    }
+      }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
+      input[type="text"],
+      input[type="email"],
+      input[type="password"] {
         width: 100%;
         padding: 10px;
         margin: 5px 0;
@@ -87,80 +87,77 @@
         border-radius: 5px;
         background-color: #2e2e2e;
         color: #ffffff;
-    }
+      }
 
-    .input-row {
+      .input-row {
         display: flex;
         gap: 10px;
-    }
+      }
 
-    .checkbox-container {
+      .checkbox-container {
         display: flex;
         align-items: center;
         margin: 10px 0;
-    }
+      }
 
-    .checkbox-container input {
+      .checkbox-container input {
         margin-right: 10px;
-    }
-    .terms{
-        font-size: 14px;
-    }
+      }
 
-    button {
+      button {
         width: 100%;
         padding: 10px;
         margin-top: 10px;
         border: none;
         border-radius: 5px;
         cursor: pointer;
-    }
+      }
 
-    button[type="submit"] {
-        background-color: #3353FF;
+      button[type="submit"] {
+        background-color: #3353ff;
         color: #ffffff;
-    }
+      }
 
-    .or {
+      .or {
         text-align: center;
         margin: 10px 0;
         color: #999999;
-        font-weight:bold;
-    }
-    .signin-link {
+        font-weight: bold;
+      }
+
+      .signin-link {
         text-align: center;
         margin-top: 10px;
         font-size: 14px;
-    }
+      }
 
-    .signin-link a {
-        color: #3353FF;
+      .signin-link a {
+        color: #3353ff;
         text-decoration: none;
-    }
+      }
 
-    .signin-link a:hover {
+      .signin-link a:hover {
         text-decoration: underline;
-    }
-    .line{
+      }
+
+      .line {
         display: inline-block;
         width: 150px;
-        flex: 1; 
+        flex: 1;
         height: 3px;
-        background-color: #ffffff; 
-        border: none; 
-    }
-    .or-container {
+        background-color: #ffffff;
+        border: none;
+      }
+
+      .or-container {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 10px; 
-        margin: 20px 0; 
-    }
-    .or {
-        margin: 0; 
-        padding: 0 10px; 
-    }
-    .fb-btn {
+        gap: 10px;
+        margin: 20px 0;
+      }
+
+      .fb-btn {
         border-radius: 30px;
         background-color: #444444;
         color: #ffffff;
@@ -168,8 +165,9 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
-    }
-    .g-btn{
+      }
+
+      .g-btn {
         border-radius: 30px;
         background-color: #444444;
         color: #ffffff;
@@ -177,12 +175,22 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
-    }
-     </style>
+      }
+
+      .messageDiv {
+        background-color: hsl(327, 90%, 28%);
+        color: white;
+        padding: 10px 20px;
+        margin: 10px;
+        border-radius: 5px;
+        font-size: 1rem;
+        opacity: 0;
+        animation: fadeOut 7s forwards;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-
       <div class="image-signup">
         <img src="images/signup.png" alt="raw-image" />
       </div>
@@ -192,36 +200,23 @@
         <h1>Sign Up</h1>
         <p>Fill in the appropriate info to create an account on FocusBox</p>
 
-        <form>
+        <form id="signupForm">
+          <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
           <div class="input-row">
-            <input type="text" placeholder="First Name" required />
-            <input type="text" placeholder="Last Name" required />
+            <input id="fname" type="text" placeholder="First Name" required />
+            <input id="lname" type="text" placeholder="Last Name" required />
           </div>
 
-          <input
-            type="email"
-            placeholder="Email Address"
-            required
-            pattern=".+@gmail\.com"
-          />
-
-          <input type="password" placeholder="New Password" required />
-          <input type="password" placeholder="Confirm Password" required />
+          <input id="email" type="email" placeholder="Email Address" required />
+          <input id="newpassword" type="password" placeholder="New Password" required />
+          <input id="password" type="password" placeholder="Confirm Password" required />
 
           <div class="checkbox-container">
             <input type="checkbox" required />
             <label class="terms">I agree to FocusBox Terms of Services & Policy</label>
           </div>
 
-          <button type="submit">Sign Up</button>
-          <div class="or-container">
-            <hr class="line">
-            <p class="or">OR</p>
-            <hr class="line">
-        </div>
-
-          <button class="g-btn"><img src="images/g-icon.png" style="width: 20px; height: 20px;"> Continue with Google</button>
-          <button class="fb-btn"><img src="images/fb-icon.png" style="width: 25px; height: 25px;">Continue with Facebook</button>
+          <button id="submit" type="submit">Sign Up</button>
 
         </form>
 
@@ -230,5 +225,8 @@
         </p>
       </div>
     </div>
+
+    <!-- Include JS as a module -->
+    <script type="module" src="firebaseauth.js"></script>
   </body>
 </html>
